--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,10 @@ body {
     height: 100vh;
     padding: 10px;
 }
+
+.form {
+  background-color: rgb(214, 170, 25);
+  padding: 15px;
+  border-radius: 10px;
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 75%);
+}
